...
                  name="mail-outline"
                  size={theme.metrics.iconSize.md}
                  color={getIconColor()}
                  style={styles.inputIcon}
                />
                <TextInput
                  testID="forgot-password-email-input"
                  style={styles.inputText}
                  placeholder={t("auth.emailPlaceholder")}
                  placeholderTextColor={theme.palette.neutral[400]}
                  value={value}
                  onChangeText={onChange}
                  onFocus={() => setFocusedField(true)}
...
            <Text style={styles.errorBannerText}>{errors.root.message}</Text>
          </View>
        )}
      </View>

      <TouchableOpacity
        testID="forgot-password-submit-button"
        style={[
          styles.submitButton,
          (isSubmitting || !!errors.email) && styles.submitButtonDisabled,
        ]}
        onPress={handleSubmit(onSubmit)}
        disabled={isSubmitting || !!errors.email}
...
